--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML-Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div>
+        <h1>Endre fargen på teksten!</h1>
+        <h2 id="tekst">Denne teksten skal endre farge :)</h2>
+        <input type="text" id="farge" placeholder="Skriv inn en Englesk Farge">
+        <button id="endreFarge" onclick="klikkeFunksjon(e)">Endre Farge</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
