--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div>
+    <div id="container">
         <h1>Endre fargen på teksten!</h1>
         <h2 id="tekst">Denne teksten skal endre farge :)</h2>
         <input type="text" id="farge" placeholder="Skriv inn en Englesk Farge">
