--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="container">
         <h1>Endre tekst fargen</h1>
         <h2 id="tekst">Denne teksten skal endre farge :)</h2>
@@ -29,8 +28,17 @@
             <input type="radio" id="greenBG" name="fargeBG" value="green">
             <label for="greenBG">Grønn</label>
         </div>
+        <div class="colorChoice">
+            <input type="color" name="fargeBG" id="colorBG">
+            <label for="colorBG">Velg egen farge</label>
+        </div>
     </div>
 
+    <div class="container">
+        <h1></h1>
+
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
